<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservaActivity"
    android:background="@color/bg_app">

    <TextView
        android:id="@+id/tvNameRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:textColor="@color/text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_margin="24dp"
        android:textAllCaps="true"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTable1"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/element"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameRestaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvTable2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_table"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table1"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTable2"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/element"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameRestaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_table"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table2"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTable3"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/element"
        app:cardCornerRadius="24dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameRestaurant"
        app:layout_constraintStart_toEndOf="@+id/cvTable2"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_table"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table3"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        android:textSize="24dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@+id/cvTable1"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_margin="24dp"
        android:textAllCaps="true"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvName"
        android:layout_width="360dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAction"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint"
        android:background="@color/element"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/element"
        app:layout_constraintTop_toBottomOf="@id/tvAction"
        app:cardCornerRadius="28dp"
        android:layout_marginTop="46dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:layout_marginEnd="18dp"/>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textStyle="bold"
                android:textSize="24dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginStart="18dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="36dp"
        android:layout_margin="24dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>